Remove playlist schedule scrollbars and fix border colors.

--- a/web/static/less/common/vendor-overrides/fullcalendar.less
+++ b/web/static/less/common/vendor-overrides/fullcalendar.less
@@ -3,6 +3,7 @@
     background: fade(@alert-info-bg, 5%);
   }
 
+  .fc-row.panel-default,
   hr.fc-divider {
     border-color: @table-border-color;
   }
